--- a/src/components/PastEventsNav.astro
+++ b/src/components/PastEventsNav.astro
@@ -13,8 +13,8 @@ const { eventId } = Astro.props;
 ))}
 </nav>
 
-<style scoped>
+<style>
   a {
-    font-size: smaller;
+    font-size: 12pt;
   }
 </style>
