--- a/src/components/Charity.astro
+++ b/src/components/Charity.astro
@@ -1,7 +1,11 @@
+---
+const { currentEvent } = Astro.props;
+---
+
 <p class="charity">
-  <a class="charity-link" href="https://www.justgiving.com/page/nethackathon" target="_blank">
+  <a class="charity-link" href={currentEvent.giving_url} target="_blank">
     <small>
-      We're supporting Girls Who Code, donate now!
+      We're supporting {currentEvent.charity_name}, donate now!
     </small>
   </a>
 </p>
