--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -13,10 +13,7 @@ const signUpsOpen = (
   <a class={(currentPage === 'stats') ? 'active' : ''} href="/stats">Stats</a>
   <a class={(currentPage === 'about') ? 'active' : ''} href="/about">About</a>
   <a class={(currentPage === 'past') ? 'active' : ''} href={"/past/" + lastEvent.id}>Past events</a>
-  { currentEvent.charity && <a class={(currentPage === 'charity') ? 'active' : ''} href="/charity">Charity</a> }
+  { currentEvent.charity_name && <a class={(currentPage === 'charity') ? 'active' : ''} href="/charity">Charity</a> }
   { signUpsOpen && <a href="/sign-up">Sign up</a> }
   <a href="/annotate">#annotate</a>
 </nav>
-
-<style>
-</style>
