put discord invite on website

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -41,7 +41,7 @@ const eventObject = parseEvent(currentEvent);
   </section>
   <section>
     <h2>When is the next event?</h2>
-    <p>We run the event twice a year, in the spring and fall, the next event will be held
+    <p>We run the event twice a year, in the spring and fall (northern hemisphere), the next event will be held
       the weekend of {eventObject.eventDates}.</p>
   </section>
   <section>
@@ -49,6 +49,7 @@ const eventObject = parseEvent(currentEvent);
     <p>Are you a Twitch Streamer? We're looking for people to play NetHack on stream, the
       time commitment is two hours at a time of your choosing during a weekend.</p>
     <p>To participate in future events <a href="/sign-up">sign up as a streamer today!</a></p>
+    <p>Join <a href="https://discord.gg/sAaABGgVNr">our discord</a>.</p>
   </section>
   <section class="a double">
     <h2>What is #annotate?</h2>
