--- a/src/components/EventCountdown.astro
+++ b/src/components/EventCountdown.astro
@@ -1,19 +1,20 @@
 ---
-import Countdown from './Countdown.astro';
-import { DateTime } from 'luxon';
+import Countdown from "./Countdown.astro";
+import { eventDateString } from "../js/shared";
 
 const { currentEvent, nStreamers } = Astro.props;
-
-const start = DateTime.fromISO(currentEvent.eventStart).toMillis();
-const end = DateTime.fromISO(currentEvent.eventEnd).toMillis();
-const hours = (end - start) / 1000 / 60 / 60;
+const eventDate = eventDateString(
+  currentEvent.event_start,
+  currentEvent.event_end,
+);
 ---
 
-<Countdown start={currentEvent.signupsStart} end={currentEvent.eventStart}>
+<Countdown start={currentEvent.signup_start} end={currentEvent.event_start}>
   <p slot="before-countdown">
-    The {currentEvent.eventTitle} NetHackathon will start in:
+    The {currentEvent.title} NetHackathon will start in:
   </p>
   <p slot="after-countdown">
-    On <strong>{currentEvent.eventDates}</strong>, {nStreamers} Twitch content creators will stream NetHack continuously for {hours} hours!
+    On <strong>{eventDate}</strong>, {nStreamers > 0 && nStreamers} Twitch content
+    creators will stream NetHack continuously for over 48 hours!
   </p>
 </Countdown>
