--- a/src/components/Schedule.astro
+++ b/src/components/Schedule.astro
@@ -1,10 +1,14 @@
-<h2>Schedule <span style="font-size: medium;">All times <span id="time-zone">UTC</span></span></h2>
+<h2>
+  Schedule <span style="font-size: medium;"
+    >All times <span id="time-zone">UTC</span></span
+  >
+</h2>
 <table>
   <colgroup>
-    <col style="width: 6em;">
-    <col style="width: 7em;">
-    <col style="width: 10em;">
-    <col>
+    <col style="width: 6em;" />
+    <col style="width: 7em;" />
+    <col style="width: 10em;" />
+    <col />
   </colgroup>
   <thead>
     <tr>
@@ -30,10 +34,10 @@
     height: 21px;
     line-height: 21px;
   }
-  td[data-theme='dark'] {
+  td[data-theme="dark"] {
     border-bottom-color: var(--color-light);
   }
-  td[data-theme='light'] {
+  td[data-theme="light"] {
     border-bottom-color: var(--color-dark);
   }
   tr.current-streamer {
@@ -51,67 +55,71 @@
   }
 </style>
 
-<script>
-  import { DateTime } from 'luxon';
+<script client:load>
+  import { DateTime } from "luxon";
 
   function parseStartTime(start: string) {
     const dateTime = DateTime.fromISO(start);
     return {
       day: dateTime.weekdayLong,
-      time: dateTime.toLocaleString(DateTime.TIME_SIMPLE)
+      time: dateTime.toLocaleString(DateTime.TIME_SIMPLE),
     };
   }
 
   async function loadSchedule() {
-    const scheduleTbody = document.getElementById('schedule-tbody');
-    const response = await fetch('https://api.nethackathon.org/event/current/schedule');
+    const scheduleTbody = document.getElementById("schedule-tbody");
+    const response = await fetch(
+      "https://api.nethackathon.org/event/current/schedule",
+    );
     const data = await response.json();
-    document.getElementById('time-zone').textContent = DateTime.local().offsetNameShort;
-    let lastWeekday = '';
+    const timeZone = document.getElementById("time-zone");
+    if (!timeZone) return;
+    timeZone.textContent = DateTime.local().offsetNameShort;
+    let lastWeekday = "";
     data.forEach((streamer) => {
-      const tr = document.createElement('tr');
-      tr.classList.add('schedule-row');
+      const tr = document.createElement("tr");
+      tr.classList.add("schedule-row");
       const startTime = parseStartTime(streamer.start_time);
-      const td0 = document.createElement('td');
-      td0.classList.add('weekday');
-      td0.classList.add('hide-second');
+      const td0 = document.createElement("td");
+      td0.classList.add("weekday");
+      td0.classList.add("hide-second");
       if (startTime.day !== lastWeekday) {
         lastWeekday = startTime.day;
         td0.innerHTML = startTime.day;
       }
       tr.appendChild(td0);
-      const td1 = document.createElement('td');
-      td1.classList.add('start-time');
+      const td1 = document.createElement("td");
+      td1.classList.add("start-time");
       td1.dataset.start = streamer.start_time;
       td1.innerHTML = startTime.time;
       tr.appendChild(td1);
-      const td2 = document.createElement('td');
+      const td2 = document.createElement("td");
       td2.innerHTML = `<a href="https://twitch.tv/${streamer.username}">${streamer.username}</a>`;
       tr.appendChild(td2);
-      const td3 = document.createElement('td');
-      td3.classList.add('hide-first');
-      td3.innerHTML = (streamer.notes) ? streamer.notes : '';
+      const td3 = document.createElement("td");
+      td3.classList.add("hide-first");
+      td3.innerHTML = streamer.notes ? streamer.notes : "";
       tr.appendChild(td3);
       scheduleTbody.appendChild(tr);
     });
   }
 
   function highlightCurrentStreamer() {
-    const trs = document.getElementsByClassName('schedule-row');
+    const trs = document.getElementsByClassName("schedule-row");
     let currentStreamer = false;
     for (let i = trs.length - 1; i > -1; i--) {
-      const td = trs[i].getElementsByClassName('start-time')[0];
+      const td = trs[i].getElementsByClassName("start-time")[0];
       const dateTime = DateTime.fromISO(td.dataset.start).toLocal();
       if (!currentStreamer && dateTime < DateTime.local()) {
         currentStreamer = true;
-        trs[i].classList.add('current-streamer');
+        trs[i].classList.add("current-streamer");
       } else {
-        trs[i].classList.remove('current-streamer');
+        trs[i].classList.remove("current-streamer");
       }
     }
   }
 
-  window.addEventListener('load', async () => {
+  window.addEventListener("load", async () => {
     await loadSchedule();
     highlightCurrentStreamer();
     setInterval(() => {
