--- a/src/components/Streamers.astro
+++ b/src/components/Streamers.astro
@@ -1,8 +1,8 @@
 ---
 // This version of the Streamers component gets the list of streamers from the API at build time.
-const response = await fetch('https://api.nethackathon.org/streamers');
-const data = await response.json();
-const usernames = data.streamers.sort((a, b) => {
+const response = await fetch('https://api.nethackathon.org/event/current/schedule');
+const schedule = await response.json();
+const usernames = schedule.sort((a, b) => {
   if (a.username.toUpperCase() < b.username.toUpperCase()) return -1;
   return 1;
 }).map((s) => s.username);
