--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,38 +1,34 @@
 ---
+import MainLayout from "../layouts/MainLayout.astro";
+import MainActive from "../components/MainActive.astro";
+import MainConcluded from "../components/MainConcluded.astro";
+import MainUpcoming from "../components/MainUpcoming.astro";
+import {
+  isEventActive,
+  isEventUpcoming,
+  hasEventConcluded,
+} from "../js/event.js";
 
-import CurrentStreamer from '../components/CurrentStreamer.astro';
-import MainLayout from '../layouts/MainLayout.astro';
-import EventCountdown from '../components/EventCountdown.astro';
-import Schedule from '../components/Schedule.astro';
-import { parseEvent } from '../js/shared.js';
-import EventMedia from "../components/EventMedia.astro";
-import EventStreamers from "../components/EventStreamers.astro";
-
-console.log(`${import.meta.env.NODE_API}/event/current`);
-const response = await fetch(`${import.meta.env.NODE_API}/event/current`)
-  .then((response) => response.json());
+const response = await fetch(`${import.meta.env.NODE_API}/event/current`).then(
+  (response) => response.json(),
+);
 const currentEvent = response.currentEvent;
 
-const eventObject = parseEvent(currentEvent);
-
-const streamersRes = await fetch(`${import.meta.env.NODE_API}/event/current/schedule`);
-const schedule = await streamersRes.json();
-const streamers = schedule.map((s) => s.username);
-const deduped = streamers.filter((u, i) => streamers.indexOf(u) === i);
-
+const eventActive = isEventActive(currentEvent);
+const eventUpcoming = isEventUpcoming(currentEvent);
+const eventConcluded = hasEventConcluded(currentEvent);
 ---
+
 <MainLayout currentPage="home">
-  <section class="a double">
-    <h3>Fall 2024</h3>
-    <p>Thank you to everyone who participated in the Fall 2024 event, it was a great success!</p>
-  </section>
-  <section class="a double">
-    <EventStreamers eventId="6" />
-  </section>
-  <EventMedia eventId="6" />
-  <!--EventCountdown currentEvent={eventObject} nStreamers={deduped.length} />
-  <CurrentStreamer currentEvent={eventObject} />
-  <section class="double c">
-    <Schedule />
-  </section-->
+  {
+    currentEvent && (
+      <>
+        {eventActive && <MainActive currentEvent={currentEvent} />}
+        {eventConcluded && !eventUpcoming && (
+          <MainConcluded currentEvent={currentEvent} />
+        )}
+        {eventUpcoming && <MainUpcoming currentEvent={currentEvent} />}
+      </>
+    )
+  }
 </MainLayout>
