Preferred slot, accessibility, and responsive
- Now putting star next to preferred slots in AdminSchedule
- Fixed dark/light mode in Admin component
- Some fixes to mobile layout

--- a/src/components/SocialAndLogin.astro
+++ b/src/components/SocialAndLogin.astro
@@ -70,6 +70,10 @@ const logoutUrl = `${import.meta.env.NODE_API}/twitch/logout`;
     margin: 0 auto;
   }
 
+  #login-container {
+    text-align: right;
+  }
+
   .social-links {
     display: flex;
     gap: 1rem;
