Fixed sub nav layout for larger screen sizes.

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -130,6 +130,9 @@ const { lastEvent } = await response.json();
     section.double {
       grid-column: 1 / 3;
     }
+    nav.sub {
+      grid-column: 1 / 3;
+    }
   }
   @media (max-width: 959px) {
     #nethackathon-logo {
